fix composite icons alignment and positioning issues

--- a/sass/components/_categorical-display.scss
+++ b/sass/components/_categorical-display.scss
@@ -200,21 +200,19 @@
         }
     }
 
-    .ic-icon, .ic-frx {
-        height: $large-icon-size;
-        width: $large-icon-size;
-    }
-    .ic-icon {
-        display: inline-block;
-        margin-right: 15px;
-        > svg {
-            vertical-align: sub;
+    .left {
+        > .ic-icon, > .ic-frx {
+            height: $large-icon-size;
+            width: $large-icon-size;
         }
-    }
-    .ic-frx {
-        margin-right: 10px;
-    }
-    .ic-otc, .ic-wld {
-        margin-right: 15px;
+        > .ic-icon {
+            display: inline-block;
+            > svg {
+                vertical-align: sub;
+            }
+        }
+        > .ciq-item-display {
+            margin-left: 15px;
+        }
     }
 }
